--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-jade": "^1.1.0",
     "gulp-jshint": "^1.11.2",
+    "gulp-livereload": "^3.8.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.5.2",
