--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "devDependencies": {
     "angular": "^1.4.3",
+    "angular-h-sweetalert": "^1.4.6",
+    "angular-sweetalert": "^1.1.0",
     "del": "^1.2.0",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
@@ -26,6 +28,7 @@
     "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
-    "mongodb": "^2.0.40"
+    "mongodb": "^2.0.40",
+    "sweetalert": "^1.1.0"
   }
 }
